--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,49 +4,43 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 authors = [
-    { name = "tugonbob", email = "57576522+tugonbob@users.noreply.github.com" }
+    { name = "Joshua Gao", email = "joshuakgao@gmail.com" }
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "accelerate>=1.10.1",
     "detect-secrets>=1.5.0",
+    "dspy>=3.0.1",
+    "faiss-cpu>=1.12.0",
+    "hydra-core>=1.3.2",
+    "inquirer>=3.4.1",
+    "langchain>=0.3.27",
+    "langchain-community>=0.3.27",
+    "langchain-core>=0.3.74",
+    "langchain-google-genai>=2.1.9",
+    "langchain-huggingface>=0.3.1",
+    "langchain-ollama>=0.3.6",
+    "langchain-openai>=0.3.30",
+    "lightrag-hku>=1.4.6",
+    "matplotlib>=3.10.5",
+    "omegaconf>=2.3.0",
+    "openai<1.100.0",
     "pre-commit>=4.3.0",
+    "pypdf>=6.0.0",
     "pytest>=8.4.2",
-    "ruff>=0.14.3",
+    "ragas>=0.3.2",
+    "ruff>=0.12.12",
+    "scipy>=1.16.1",
+    "seaborn>=0.13.2",
+    "sentence-transformers>=5.1.0",
+    "torch>=2.8.0",
+    "tqdm>=4.67.1",
+    "transformers>=4.55.2",
 ]
 
 [project.scripts]
-ragalyst = "ragalyst:main"
+ragalyst = "ragalyst.cli:main"
 
 [build-system]
-requires = ["uv_build>=0.8.11,<0.9.0"]
+requires = ["uv_build>=0.8.12,<0.9.0"]
 build-backend = "uv_build"
-
-[tool.pytest.ini_options]
-testpaths = ["tests"]
-
-[tool.ruff]
-target-version = "py312"
-line-length = 100
-
-[tool.ruff.format]
-quote-style = "double"
-indent-style = "space"
-docstring-code-format = true
-
-[tool.ruff.lint]
-select = [
-    "E",   # pycodestyle errors
-    "F",   # pyflakes
-    "I",   # isort
-    "D",   # pydocstyle (docstrings)
-]
-ignore = [
-    # Google convention prefers summary on the first line; these are commonly disabled:
-    "D203", # one-blank-line-before-class (conflicts with D211)
-    "D213", # multi-line-summary-second-line
-    "D104", # Missing docstring in public package
-    "E501", # Line too long
-]
-
-[tool.ruff.lint.pydocstyle]
-convention = "google"
