--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,14 @@ dependencies = [
     "langchain-openai>=0.3.30",
     "lightrag-hku>=1.4.6",
     "matplotlib>=3.10.5",
+    "nltk>=3.9.2",
     "omegaconf>=2.3.0",
     "openai<1.100.0",
     "pre-commit>=4.3.0",
     "pypdf>=6.0.0",
     "pytest>=8.4.2",
     "ragas>=0.3.2",
+    "rouge-score>=0.1.2",
     "ruff>=0.12.12",
     "scipy>=1.16.1",
     "seaborn>=0.13.2",
